--- a/scss/theme/_index.scss
+++ b/scss/theme/_index.scss
@@ -2,4 +2,5 @@
 //   Theme
 // --------------------------------
 
+@forward 'color' show create-theme-color, generate-scheme-css-vars;
 @forward 'theme';
