--- a/scss/core/api/_media-query.scss
+++ b/scss/core/api/_media-query.scss
@@ -28,14 +28,14 @@
 }
 
 // Minimum breakpoint width
-@function min($key) {
+@function min-bp($key) {
   $min: bp($key);
 
   @return if($min != 0, $min, null);
 }
 
 // Maximum breakpoint width
-@function max($key) {
+@function max-bp($key) {
   $max: bp($key);
 
   @return if($max and $max > 0, $max - 0.02, null);
@@ -59,7 +59,7 @@
 /// @content - a min-width media query
 ///
 @mixin mq($breakpoint, $type: screen) {
-  @include from($breakpoint, $type) {
+  @include mq-from($breakpoint, $type) {
     @content;
   }
 }
@@ -70,7 +70,7 @@
 ///
 /// @content - a min-width media query
 ///
-@mixin from($breakpoint, $type: screen) {
+@mixin mq-from($breakpoint, $type: screen) {
   $breakpoint: if(bp($breakpoint), bp($breakpoint), $breakpoint);
   @media #{$type} and (min-width: $breakpoint) {
     @content;
@@ -83,7 +83,7 @@
 ///
 /// @content - a max-width media query
 ///
-@mixin to($breakpoint, $type: screen) {
+@mixin mq-to($breakpoint, $type: screen) {
   $breakpoint: if(bp($breakpoint), bp($breakpoint), $breakpoint);
   @media #{$type} and (max-width: $breakpoint) {
     @content;
@@ -97,7 +97,7 @@
 ///
 /// @content - a min-width and max-width media query
 ///
-@mixin between($from, $to, $type: screen) {
+@mixin mq-between($from, $to, $type: screen) {
   $from: if(bp($from), bp($from), $from);
   $to: if(bp($to), bp($to), $to);
 
@@ -112,7 +112,7 @@
 ///
 /// @content - a min-width and/or max-width media query
 ///
-@mixin at($breakpoint, $type: screen) {
+@mixin mq-at($breakpoint, $type: screen) {
   $keys: map.keys(theme(screens));
   $length: list.length(theme(screens));
   $index: list.index($keys, $breakpoint);
@@ -120,59 +120,59 @@
   @if $length > $index {
     $next-breakpoint: list.nth($keys, ($index + 1));
 
-    @include between($breakpoint, $next-breakpoint, $type) {
+    @include mq-between($breakpoint, $next-breakpoint, $type) {
       @content;
     }
   } @else {
-    @include from($breakpoint, $type) {
+    @include mq-from($breakpoint, $type) {
       @content;
     }
   }
 }
 
-@mixin not($query, $type: screen) {
+@mixin mq-not($query, $type: screen) {
   @media not #{$type} and #{$query} {
     @content;
   }
 }
 
-@mixin orientation($value: landscape, $type: screen) {
+@mixin mq-orientation($value: landscape, $type: screen) {
   @media #{$type} and (orientation: $value) {
     @content;
   }
 }
 
-@mixin resolution($value, $type: screen) {
+@mixin mq-resolution($value, $type: screen) {
   @media #{$type} and (resolution: $value) {
     @content;
   }
 }
 
-@mixin min-resolution($value, $type: screen) {
+@mixin mq-min-resolution($value, $type: screen) {
   @media #{$type} and (min-resolution: $value) {
     @content;
   }
 }
 
-@mixin max-resolution($value, $type: screen) {
+@mixin mq-max-resolution($value, $type: screen) {
   @media #{$type} and (max-resolution: $value) {
     @content;
   }
 }
 
-@mixin aspect-ratio($value, $type: screen) {
+@mixin mq-aspect-ratio($value, $type: screen) {
   @media #{$type} and (aspect-ratio: $value) {
     @content;
   }
 }
 
-@mixin min-aspect-ratio($value, $type: screen) {
+@mixin mq-min-aspect-ratio($value, $type: screen) {
   @media #{$type} and (min-aspect-ratio: $value) {
     @content;
   }
 }
 
-@mixin max-aspect-ratio($value, $type: screen) {
+@mixin mq-max-aspect-ratio($value, $type: screen) {
   @media #{$type} and (max-aspect-ratio: $value) {
     @content;
   }
@@ -192,7 +192,7 @@
       @content;
     }
   } @else {
-    @include not($query) {
+    @include mq-not($query) {
       @content;
     }
   }
@@ -206,7 +206,7 @@
       @content;
     }
   } @else {
-    @include not($query) {
+    @include mq-not($query) {
       @content;
     }
   }
@@ -220,7 +220,7 @@
       @content;
     }
   } @else {
-    @include not($query) {
+    @include mq-not($query) {
       @content;
     }
   }
@@ -234,7 +234,7 @@
       @content;
     }
   } @else {
-    @include not($query) {
+    @include mq-not($query) {
       @content;
     }
   }
