--- a/scss/theme/_components.scss
+++ b/scss/theme/_components.scss
@@ -7,7 +7,7 @@
 $components: (
   button: (
     defaults: (
-      padding: spacing(4, 12),
+      padding: theme(spacing, 4),
       background-color: color(blue, 6),
     ),
     variants: (
