--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -2,12 +2,13 @@
 //   Button
 // --------------------------------
 
+// TODO: How can I have an variable entry point for the components theme config where I can change things like border-radius and it reflects on all componentst that use that theme-border-radius? See maybe how stiches does things?
+
 @use 'sass:map';
 
 @use '../core' as *;
 
 $selectors: button, '.btn';
-$config: theme(components, button);
 
 @mixin reset {
   appearance: none;
@@ -20,43 +21,42 @@ $config: theme(components, button);
   text-decoration: none;
 }
 
-// @mixin default {
-// @include text-size(map.get($config, font-size));
-// align-items: center;
-// background-color: color(gray, 1);
-// border: 1px solid color(gray, 2);
-// border-radius: radius(map.get($config, radius));
-// box-shadow: shadow(map.get($config, shadow));
-// color: color(gray, 7);
-// display: inline-flex;
-// font-weight: font-weight(map.get($config, font-weight));
-// padding: spacing(map.get($config, padding-y), map.get($config, padding-x));
-// text-transform: map.get($config, text-transform);
+@mixin defaults {
+  @include text-size(md);
+  background-color: fill(gray, 5);
+  border: 1px solid fill(gray, 2);
+  border-radius: radius(md);
+  box-shadow: shadow(sm);
+  // color: color(gray, 7);
+  // display: inline-flex;
+  // font-weight: font-weight(map.get($config, font-weight));
+  // padding: spacing(map.get($config, padding-y), map.get($config, padding-x));
+  // text-transform: map.get($config, text-transform);
 
-// &:hover {
-//   background-color: color(gray, 5);
-// }
+  // &:hover {
+  //   background-color: color(gray, 5);
+  // }
 
-// &:focus {
-//   outline: none;
-// }
-// }
+  // &:focus {
+  //   outline: none;
+  // }
+  // }
 
-@mixin styled($selectors, $config) {
-  #{$selectors} {
-    @include reset;
+  // @mixin styled($selectors, $config) {
+  //   #{$selectors} {
+  //     @include reset;
 
-    @each $property, $value in map.get($config, defaults) {
-      #{$property}: $value;
-    }
-  }
+  //     @each $property, $value in map.get($config, defaults) {
+  //       #{$property}: $value;
+  //     }
+  //   }
 }
 
 @mixin styles {
-  // #{$selectors} {
-  //   @include reset;
-  //   @include default;
-  // }
+  #{$selectors} {
+    @include reset;
+    @include defaults;
+  }
 
-  @include styled($selectors, $config);
+  // @include styled($selectors, $config);
 }
