--- a/dev/assets/scss/_utilities.scss
+++ b/dev/assets/scss/_utilities.scss
@@ -5,7 +5,7 @@
 
 // @include koi.utilities();
 
-// We can include the utilities directly or use the pre-built CSS file, this way the build time during development will be largely reduced, there is on catch though, this build won't assume any configuration changes.
+// Alternatively We can include the utilities directly or use the pre-built CSS file, this way the build time during development will be largely reduced, there is one catch though, this build won't assume any configuration changes.
 @include meta.load-css('../../../dist/koi-utilities.css');
 
 // << Insert your utility classes here >>
