--- a/scss/tokens/_colors.scss
+++ b/scss/tokens/_colors.scss
@@ -30,16 +30,16 @@ $colors: (
     9: #811d1d,
   ),
   yellow: (
-    0: #fefce7,
+    0: #fefce8,
     1: #fef9c3,
-    2: #fef08b,
-    3: #fddf49,
-    4: #facc14,
-    5: #fbe8b0,
-    6: #c88a04,
-    7: #a26107,
-    8: #864e0e,
-    9: #733f12,
+    2: #fef08a,
+    3: #fde047,
+    4: #facc15,
+    5: #eab308,
+    6: #ca8a04,
+    7: #a16207,
+    8: #854d0e,
+    9: #713f12,
   ),
   green: (
     0: #f3fcf5,
