--- a/scss/core/api/_color.scss
+++ b/scss/core/api/_color.scss
@@ -4,6 +4,7 @@
 
 @use '../../config' as *;
 @use '../../config/internal' as *;
+@use '../helpers' as *;
 @use '../helpers/internal' as *;
 @use 'theme' as *;
 
@@ -14,6 +15,7 @@ $-default-accent: config(fallbacks, accent);
 //   Functions
 // --------------------------------
 
+// TODO: Rethink this fn as we need to output this values in HSL
 @function fill($name, $shade: $-default-shade) {
   @if is-scheme-color($name, $shade) {
     @return css-var(#{$color-prefix}-#{$name}-#{$shade});
